--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -1,7 +1,11 @@
 @import "~material-design-lite/src/color-definitions";
 
-$color-primary: $palette-cyan-800 !default;
+$color-primary: $palette-cyan-900 !default;
 $color-primary-dark: $palette-orange-700 !default;
 $color-accent: $palette-grey-50 !default;
 $color-primary-contrast: $palette-grey-50 !default;
 $color-accent-contrast: $palette-grey-900 !default;
+
+.loader {
+    background-image: url("./../resources/icon.png");
+}
