--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,14 @@
 @import "./courses/courses.scss";
 @import "./favorites/favorites.scss";
 @import "./main/main.component.scss";
-
 @import "./navigation/navigation.component.scss";
+
+@import "./shared/components/spinner/spinner.component.scss";
 
 app {
     main {
         margin-top: 3.8em;
-        margin-bottom: 50px;
+        margin-bottom: 35px;
         @media screen and (min-width: 1023px) {
             margin-top: 4.5em;
         }
@@ -15,7 +16,7 @@ app {
             margin-top: 2.6em;
         }
         router {
-            height: 100%;
+            min-height: 100%;
             display: block;
         }
     }
