--- a/assets/mdl-button.scss
+++ b/assets/mdl-button.scss
@@ -1,5 +1,6 @@
 .mdl-button--mini-fab {
-    width: 30px !important;
-    min-width: 30px !important;
-    height: 30px !important;
+    $size: 30px;
+    width: $size !important;
+    min-width: $size !important;
+    height: $size !important;
 }
