--- a/assets/mdl-layout.scss
+++ b/assets/mdl-layout.scss
@@ -4,23 +4,24 @@
         transition: font-size 0.2s;
     }
     &.scrolled {
+        $size: 36px;
         @extend .mdl-shadow--8dp;
         font-size: 0.7em;
-        min-height: 36px;
+        min-height: $size;
         background-color: white !important;
         color: black !important;
         .mdl-layout__header-row {
-            height: 36px;
+            height: $size;
         }
         .mdl-layout-title {
-            font-size: 16px;
+            font-size: ($size / 2) - 2;
         }
         .mdl-layout__drawer-button {
-            margin: 4px 12px;
+            margin: 4px $size / 3;
             color: inherit;
-            height: 32px;
-            width: 36px;
-            line-height: 36px;
+            height: $size - 4;
+            width: $size;
+            line-height: $size;
         }
     }
 }
