Implements network error on CourseListComponent

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,7 @@
 @import "./navigation/navigation.component.scss";
 
 @import "./shared/components/spinner/spinner.component.scss";
+@import "./shared/components/retry/retry.component.scss";
 
 app {
     main {
