--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,44 +1,36 @@
-${ !courseList.length ? `
+${ courseList.length ? `
 
-<app-spinner></app-spinner>
-
-` : `
-
-<header>
-    Foo
-</header>
+<header class="mdl-color--${courseList[0].color}"></header>
 
 <section class="mdl-layout__header">
     <div class="mdl-layout__header-row mdl-color--black">
-        <span class="mdl-layout-title">
-            <i class="material-icons">library_books</i>
-            ${courseList.length} Cours
-        </span>
+        <span class="mdl-layout-title"><i class="material-icons">library_books</i>${courseList.length} Cours</span>
     </div>
 </section>
 
-<section class="mdl-grid">
+<section class="mdl-grid mdl-color--white">
     ${ courseList.map(course => `
-    <div class="mdl-cell mdl-cell--2-col mdl-cell--4-col-tablet mdl-card mdl-shadow--2dp">
-        <div class="mdl-card__title mdl-card--expand">
-            <h4>
-                ${course.name}
-            </h4>
+    <div onclick="navigate('${course.name}')"
+        class="mdl-cell mdl-cell--2-col mdl-cell--4-col-tablet mdl-card mdl-shadow--2dp mdl-color--${course.color}">
+        <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
+            <h4 class="mdl-card__title-text">${course.name}</h4>
         </div>
-        <div class="mdl-card__actions mdl-card--border">
-            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-                Add to Calendar
-            </a>
+        <div class="mdl-card__supporting-text  mdl-color-text--grey-50">${course.description}</div>
+        <div
+            class="mdl-card__actions mdl-card--border mdl-color-text--grey-50 mdl-color--${course.color.substr(0, course.color.length - 3) + (parseInt(course.color.substr(course.color.length - 3), 10) + 100)}">
+            <i class="material-icons">update</i>
             <div class="mdl-layout-spacer"></div>
-            <i class="material-icons">event</i>
+            <a>${course.updated}</a>
+        </div>
+        <div class="mdl-card__menu mdl-color-text--grey-50">
+            ${course.stargazers ? `
+            <i class="material-icons mdl-badge mdl-badge--overlap" data-badge="${course.stargazers}">favorite</i>
+            ` : ``}
         </div>
     </div>
-
     `).join('')}
 </section>
 
-<footer>
-    Bar
-</footer>
+<footer class=""></footer>
 
-`}
+` : `` }
