--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,4 +1,4 @@
-${ courseList.length ? `
+${ courseList ? `
 
 <header class="mdl-color--${courseList[0].color}"></header>
 
@@ -10,7 +10,7 @@ ${ courseList.length ? `
 
 <section class="mdl-grid mdl-color--white">
     ${ courseList.map(course => `
-    <div onclick="navigate('${course.name}')"
+    <div onclick="show('${course.name}')"
         class="mdl-cell mdl-cell--2-col mdl-cell--4-col-tablet mdl-card mdl-shadow--2dp mdl-color--${course.color}">
         <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
             <h4 class="mdl-card__title-text">${course.name}</h4>
