--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import "~material-design-lite/src/material-design-lite.scss";
 
 @import "./../assets/mdl-button.scss";
+@import "./../assets/mdl-card.scss";
 @import "./../assets/mdl-layout.scss";
 @import "./../assets/mdl-tab.scss";
 
