--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,36 +1,70 @@
 ${ courseList ? `
 
-<header class="mdl-color--${courseList[0].color}"></header>
+<header class="mdl-color--${courseList[0].color}">
+    <div class="mdl-cell mdl-card">
+        <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
+            <h2 class="display-1">${courseList[0].name}</h2>
+            <p class="mdl-card__supporting-text  mdl-color-text--grey-50">${courseList[0].description}</p>
+        </div>
+        <div
+            class="mdl-card__actions mdl-color-text--grey-50 mdl-color--${courseList[0].color.substr(0, courseList[0].color.length - 3) + (parseInt(courseList[0].color.substr(courseList[0].color.length - 3), 10) + 100)}">
+            <span class="material-icons">update</span>
+            <div class="mdl-layout-spacer"></div>
+            <span>${ new Intl.DateTimeFormat('fr-FR').format(new Date(courseList[0].updated))}</span>
+        </div>
+        <div class="mdl-card__menu mdl-color-text--grey-50">
+            ${courseList[0].stargazers ? `
+            <i class="material-icons mdl-badge mdl-badge--overlap" data-badge="${courseList[0].stargazers}">favorite</i>
+            ` : ``}
+        </div>
+    </div>
+</header>
 
 <section class="mdl-layout__header">
     <div class="mdl-layout__header-row mdl-color--black">
-        <span class="mdl-layout-title"><i class="material-icons">library_books</i>${courseList.length} Cours</span>
+        <span class="mdl-layout-title"><i class="material-icons">library_books</i>${courseList.length} Formation</span>
     </div>
 </section>
 
 <section class="mdl-grid mdl-color--white">
-    ${ courseList.map(course => `
+    ${ courseList.map((course, key) => key ? `
     <div onclick="show('${course.name}')"
         class="mdl-cell mdl-cell--2-col mdl-cell--4-col-tablet mdl-card mdl-shadow--2dp mdl-color--${course.color}">
         <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
-            <h4 class="mdl-card__title-text">${course.name}</h4>
+            <h3 class="mdl-card__title-text">${course.name}</h3>
         </div>
         <div class="mdl-card__supporting-text  mdl-color-text--grey-50">${course.description}</div>
         <div
-            class="mdl-card__actions mdl-card--border mdl-color-text--grey-50 mdl-color--${course.color.substr(0, course.color.length - 3) + (parseInt(course.color.substr(course.color.length - 3), 10) + 100)}">
+            class="mdl-card__actions mdl-color-text--grey-50 mdl-color--${course.color.substr(0, course.color.length - 3) + (parseInt(course.color.substr(course.color.length - 3), 10) + 100)}">
             <i class="material-icons">update</i>
             <div class="mdl-layout-spacer"></div>
-            <a>${course.updated}</a>
+            <span>${ new Intl.DateTimeFormat('fr-FR').format(new Date(course.updated))}</span>
         </div>
         <div class="mdl-card__menu mdl-color-text--grey-50">
             ${course.stargazers ? `
             <i class="material-icons mdl-badge mdl-badge--overlap" data-badge="${course.stargazers}">favorite</i>
-            ` : ``}
+            ` : ''}
         </div>
     </div>
-    `).join('')}
+    ` : '').join('')}
 </section>
 
-<footer class=""></footer>
+<footer class="mdl-mega-footer">
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--3-col mdl-cell--6-col-tablet mdl-color-text--grey-50">
+            <h4 class="mdl-typography--headline">Seeren Training</h4>
+            <p class="mdl-cell--hide-tablet">
+                Motivé par l'idée de fournir des supports de cours à mes apprenants
+                j'ai rédigé l'ensemble en open source sur Github
+            </p>
+            <a href="https://github.com/seeren" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                Follow
+            </a>
+        </div>
+        <div class="mdl-cell mdl-cell--1-col mdl-cell--2-col-tablet mdl-typography--text-center">
+            <img src="dist/resources/icon.png" alt="" />
+        </div>
+    </div>
+</footer>
 
 ` : `` }
