--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
 @import "./courses/courses.scss";
 @import "./favorites/favorites.scss";
 @import "./main/main.component.scss";
-@import "./navigation/navigation.component.scss";
 
+@import "./shared/components/navigation/navigation.component.scss";
 @import "./shared/components/spinner/spinner.component.scss";
 @import "./shared/components/retry/retry.component.scss";
 
