--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -29,7 +29,7 @@ ${ courseList ? `
 <section class="mdl-grid mdl-color--white">
     ${ courseList.map((course, key) => key ? `
     <div onclick="show('${course.name}')"
-        class="mdl-cell mdl-cell--2-col mdl-cell--4-col-tablet mdl-card mdl-shadow--2dp mdl-color--${course.color}">
+        class="mdl-cell mdl-cell--6-col-phone mdl-cell--4-col-tablet mdl-cell--3-col mdl-card mdl-shadow--2dp mdl-color--${course.color}">
         <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
             <h3 class="mdl-card__title-text">${course.name}</h3>
         </div>
@@ -51,9 +51,9 @@ ${ courseList ? `
 
 <footer class="mdl-mega-footer">
     <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--3-col mdl-cell--6-col-tablet mdl-color-text--grey-50">
+        <div class="mdl-cell mdl-cell--3-col-phone mdl-cell--6-col-tablet mdl-cell--8-col mdl-color-text--grey-50">
             <h4 class="mdl-typography--headline">Seeren Training</h4>
-            <p class="mdl-cell--hide-tablet">
+            <p class="mdl-cell--hide-phone">
                 Motivé par l'idée de fournir des supports de cours à mes apprenants
                 j'ai rédigé l'ensemble en open source sur Github
             </p>
@@ -61,7 +61,7 @@ ${ courseList ? `
                 Follow
             </a>
         </div>
-        <div class="mdl-cell mdl-cell--1-col mdl-cell--2-col-tablet mdl-typography--text-center">
+        <div class="logo mdl-cell mdl-cell--1-col-phone mdl-cell--2-col-tablet mdl-cell--4-col mdl-typography--text-center">
             <img src="dist/resources/icon.png" alt="" />
         </div>
     </div>
