--- a/src/app/courses/courses.scss
+++ b/src/app/courses/courses.scss
@@ -1,2 +1,12 @@
 @import "./course-list/course-list.component.scss";
 @import "./course/course.component.scss";
+
+app-course-list,
+app-course {
+    .sticky {
+        z-index: 9 !important;
+        position: fixed !important;
+        top: 36px !important;
+        left: 0 !important;
+    }
+}
