--- a/src/app/courses/courses.scss
+++ b/src/app/courses/courses.scss
@@ -1,5 +1,6 @@
-@import "./course-list/course-list.component.scss";
+@import "./chapter/chapter.component.scss";
 @import "./course/course.component.scss";
+@import "./course-list/course-list.component.scss";
 
 app-course-list,
 app-course {
