--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -10,7 +10,7 @@ app-navigation {
             width: 3em;
             height: 3em;
         }
-        &.sticky {
+        &.scrolled {
             background-color: white !important;
             color: black !important;
             .mdl-button--mini-fab {
