--- a/src/app/courses/courses.scss
+++ b/src/app/courses/courses.scss
@@ -3,11 +3,34 @@
 @import "./course-list/course-list.component.scss";
 
 app-course-list,
-app-course {
-    .sticky {
+app-course,
+app-chapter {
+    .scrolled {
         z-index: 9 !important;
         position: fixed !important;
         top: 36px !important;
         left: 0 !important;
+    }
+    .mdl-tabs {
+        position: absolute;
+        min-height: 100%;
+        display: flex;
+        .mdl-tabs__tab-bar {
+            z-index: 9;
+            position: absolute;
+            width: 100%;
+            top: 56px;
+            border: none;
+            .mdl-tabs__tab {
+                flex-grow: 1;
+            }
+        }
+    }
+    .mdl-tabs__panel {
+        box-sizing: border-box;
+        padding-top: 9em;
+        &.is-active {
+            display: flex !important;
+        }
     }
 }
