--- a/src/app/courses/course/course.component.html
+++ b/src/app/courses/course/course.component.html
@@ -20,35 +20,35 @@ ${ course && course.readme ? `<div
             </h3>
             <div class="duration">
                 <p class="mdl-typography--display-1">
-                    0 <span class="mdl-typography--subhead">%</span>
+                    ${percent} <span class="mdl-typography--subhead">%</span>
                 </p>
                 <svg viewBox="0 0 120 120">
                     <circle cx="60" cy="60" r="54" fill="none" stroke="#212121" stroke-width="12" />
                     <circle cx="60" cy="60" r="54" fill="none" stroke="#FFFFFF" stroke-width="12" stroke-dasharray="340"
-                        stroke-dashoffset="-0" />
+                        stroke-dashoffset="-${340 / (100 / percent)}" />
                 </svg>
             </div>
         </div>
     </div>
     <div class="mdl-tabs__panel" id="summary">
         <div class="mdl-grid justify-center">
-            ${ course.wikiList.map((wiki, index) => index
-            ? `<div class="summary-${index} mdl-card mdl-cell mdl-cell--8-col mdl-shadow--2dp">
+            ${ course.wikiList.map((wiki, wikiIndex) => wikiIndex
+            ? `<div class="summary-${wikiIndex} mdl-card mdl-cell mdl-cell--8-col mdl-shadow--2dp">
                 <div class="mdl-card__title mdl-shadow--2dp">
                     <h2 class="mdl-card__title-text">${wiki.document.querySelector('h1').innerHTML}</h2>
                     <div class="mdl-layout-spacer"></div>
-                    <button onclick="toggle(${index})" class="mdl-button mdl-js-button mdl-button--icon">
+                    <button onclick="toggle(${wikiIndex})" class="mdl-button mdl-js-button mdl-button--icon">
                         <i class="material-icons">keyboard_arrow_down</i>
                     </button>
                 </div>
                 <div class="mdl-card__supporting-text">
                     <ul class="mdl-list">
-                        ${ Array.from(wiki.document.querySelectorAll('h2')).map((h2) => `<li class="mdl-list__item">
+                        ${ Array.from(wiki.document.querySelectorAll('h2')).map((h2, sectionIndex) => `<li class="mdl-list__item">
                             <span class="mdl-list__item-primary-content">
                                 ${h2.innerText.substring(3)}
                             </span>
                             <button
-                                onclick="showChapter('${wiki.document.querySelector('h1').innerHTML}', '${h2.innerText.substring(3)}')"
+                                onclick="showChapter(${wikiIndex}, ${sectionIndex})"
                                 class="mdl-button mdl-js-button mdl-button--icon">
                                 <i class="material-icons mdl-list__item-icon">keyboard_arrow_right</i>
                             </button>
