--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -4,45 +4,49 @@ app-navigation {
     }
     .mdl-layout__header {
         transition: background 0.2s;
-        .logo {
-            transition: width 0.2s;
-            transition: height 0.2s;
-            width: 3em;
-            height: 3em;
-        }
         &.scrolled {
             background-color: white !important;
             color: black !important;
             .mdl-button--mini-fab {
-                top: -0.3em;
+                top: 0.05em;
             }
         }
         .mdl-layout__header-row {
             padding-left: 0 !important;
+            .mdl-layout-title {
+                padding: 0.5em 1em 0.5em 2.75em;
+                width: 100%;
+                box-sizing: border-box;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                .mdl-button--mini-fab {
+                    position: absolute;
+                    left: 0.5em;
+                }
+            }
+            .logo {
+                transition: width 0.2s;
+                transition: height 0.2s;
+                width: 3em;
+                height: 3em;
+            }
         }
         .mdl-layout__tab-bar-container {
             height: 0;
-            $size: 35px;
             .mdl-layout__tab-bar {
                 position: fixed;
                 bottom: 0px;
                 left: 0;
-                height: $size;
-            }
-            .mdl-layout__tab {
-                height: $size;
+                height: 35px;
+                .mdl-layout__tab {
+                    height: 35px;
+                    &.is-active::after {
+                        background-color: white !important;
+                    }
+                }
             }
         }
-    }
-    .mdl-button--mini-fab {
-        position: absolute;
-        left: 0.5em;
-        top: -0.2em;
-    }
-    .mdl-layout-title {
-        width: 100%;
-        padding: 0 3em;
-        margin: 0;
     }
     .mdl-layout__content {
         display: none;
