--- a/src/app/shared/components/retry/retry.component.scss
+++ b/src/app/shared/components/retry/retry.component.scss
@@ -1,8 +1,3 @@
 app-retry {
-    display: flex;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+    @extend app-spinner;
 }
