--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,4 +1,5 @@
-${ courseList ? `<header class="mdl-color--${courseList[0].color}">
+${ courseList
+? `<header class="mdl-color--${courseList[0].color}">
     <div class="mdl-cell mdl-card">
         <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
             <h2 class="display-1" onclick="show('${courseList[0].name}')">${courseList[0].name}</h2>
@@ -15,17 +16,15 @@ ${ courseList ? `<header class="mdl-color--${courseList[0].color}">
             ${courseList[0].stargazers
             ? `<i class="material-icons mdl-badge mdl-badge--overlap"
                 data-badge="${courseList[0].stargazers}">favorite</i>`
-            : ``}
+            : ''}
         </div>
     </div>
 </header>
-
 <section class="mdl-layout__header">
     <div class="mdl-layout__header-row mdl-color--black">
         <span class="mdl-layout-title"><i class="material-icons">library_books</i>${courseList.length} Formation</span>
     </div>
 </section>
-
 <section class="mdl-grid mdl-color--white">
     ${ courseList.map((course, key) => key
     ? `<div onclick="show('${course.name}')"
@@ -48,7 +47,6 @@ ${ courseList ? `<header class="mdl-color--${courseList[0].color}">
     </div>`
     : '').join('')}
 </section>
-
 <footer class="mdl-mega-footer">
     <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--3-col-phone mdl-cell--6-col-tablet mdl-cell--8-col mdl-color-text--grey-50">
@@ -66,4 +64,5 @@ ${ courseList ? `<header class="mdl-color--${courseList[0].color}">
             <img src="dist/resources/icon.png" alt="" />
         </div>
     </div>
-</footer>` : `` }
+</footer>`
+: '' }
